Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.x
-
Fix Version/s: 6.3.0 Alpha
-
Component/s: Network: Cache
-
Labels:None
-
Platform/s:
-
Commits:41b56c31bc1ef5bead6a718f4080a61dcbd04686 (qt/qtbase/dev)
Description
I'm seeing the following crash now with the current dev branch.
Thread 40 "QNetworkAccessM" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fff59ffb640 (LWP 7820)] 0x00007ffff69c16d1 in QNetworkAccessCache::requestEntryNow(QByteArray const&) () from /usr/local/lib/libQt6Network.so.6 (gdb) bt #0 0x00007ffff69c16d1 in QNetworkAccessCache::requestEntryNow(QByteArray const&) () at /usr/local/lib/libQt6Network.so.6 #1 0x00007ffff6a55dae in QHttpThreadDelegate::startRequest() () at /usr/local/lib/libQt6Network.so.6 #2 0x00007ffff5e99aee in QObject::event(QEvent*) () at /usr/local/lib/libQt6Core.so.6 #3 0x00007ffff758ab02 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/local/lib/libQt6Widgets.so.6 #4 0x00007ffff5e4cb5a in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/local/lib/libQt6Core.so.6 #5 0x00007ffff5e4f845 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/local/lib/libQt6Core.so.6 #6 0x00007ffff60c2283 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () at /usr/local/lib/libQt6Core.so.6 #7 0x00007ffff528f80f in g_main_dispatch (context=0x7fff40006250) at ../glib/gmain.c:3337 #8 g_main_context_dispatch (context=0x7fff40006250) at ../glib/gmain.c:4055 #9 0x00007ffff528fb98 in g_main_context_iterate (context=context@entry=0x7fff40006250, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4131 #10 0x00007ffff528fc4f in g_main_context_iteration (context=0x7fff40006250, may_block=1) at ../glib/gmain.c:4196 #11 0x00007ffff60c1bea in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/local/lib/libQt6Core.so.6 #12 0x00007ffff5e58ebb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/local/lib/libQt6Core.so.6 #13 0x00007ffff5f55962 in QThread::exec() () at /usr/local/lib/libQt6Core.so.6 #14 0x00007ffff5fc99ff in QThreadPrivate::start(void*) () at /usr/local/lib/libQt6Core.so.6 #15 0x00007ffff4e42259 in start_thread (arg=0x7fff59ffb640) at pthread_create.c:481 #16 0x00007ffff4d6a2b3 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95 (gdb)
Attachments
Issue Links
- relates to
-
QTBUG-95959 Extend qnetworkaccesscache testing
-
- Closed
-